--- a/server.cfg
+++ b/server.cfg
@@ -4,6 +4,13 @@ sv_maxclients {{maxClients}}
 set gamename rdr3
 set sv_enforceGameBuild 1491
 
+## voice settings
+setr voice_useSendingRangeOnly true
+setr voice_useNativeAudio true
+setr voice_defaultVoiceMode 1
+setr voice_enableUi 1
+setr voice_use3dAudio false
+
 # https://docs.fivem.net/docs/server-manual/server-commands/#sv_purelevel-level
 #sets sv_pureLevel 1
 #sets sv_pureLevel 2
